1
make[1]: Entering directory '/home/android/op6/android_kernel_oneplus_sdm845/out_op6_def'
  GEN     ./Makefile
#
# configuration written to .config
#
make[1]: Leaving directory '/home/android/op6/android_kernel_oneplus_sdm845/out_op6_def'
make[1]: Entering directory '/home/android/op6/android_kernel_oneplus_sdm845/out_op6_def'
  GEN     ./Makefile
scripts/kconfig/conf  --silentoldconfig Kconfig
  CHK     include/config/kernel.release
  GEN     ./Makefile
  CHK     include/generated/uapi/linux/version.h
  CHK     include/generated/utsrelease.h
  Using .. as source for kernel
  CHK     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  CHK     include/generated/asm-offsets.h
  CALL    ../scripts/checksyscalls.sh
  CHK     include/generated/compile.h
  GZIP    kernel/config_data.gz
  CHK     kernel/config_data.h
  DTC     arch/arm64/boot/dts/qcom/sdm845-v2.dtb
  DTC     arch/arm64/boot/dts/qcom/sdm845-v2.1.dtb
  DTC     arch/arm64/boot/dts/qcom/sdm845.dtb
  CC      drivers/input/fingerprint/fpc/fingerprint_filter.o
../drivers/input/fingerprint/fpc/fingerprint_filter.c:891:6: error: redefinition of 'register_input_event'
 void register_input_event(const char* caller) { }
      ^
../drivers/input/fingerprint/fpc/fingerprint_filter.c:214:6: note: previous definition of 'register_input_event' was here
 void register_input_event(const char* caller) { }
      ^
../scripts/Makefile.build:298: recipe for target 'drivers/input/fingerprint/fpc/fingerprint_filter.o' failed
../scripts/Makefile.build:549: recipe for target 'drivers/input/fingerprint/fpc' failed
../scripts/Makefile.build:549: recipe for target 'drivers/input/fingerprint' failed
../scripts/Makefile.build:549: recipe for target 'drivers/input' failed
  DTC     arch/arm64/boot/dts/qcom/sdm845-mtp-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-evb-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-evb-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-pvt-v2.1-backup-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-dvt-v2.1-backup-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-dvt-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-dvt-v2.1-usb30-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-pvt-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-evt1-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-mp-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-evt2-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-evt2-cxo-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/enchilada-t0-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/flan-evb-v2-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/flan-evb-v2.1-overlay.dtbo
  DTC     arch/arm64/boot/dts/qcom/sdm845-v2-mtp-overlay.dtbo
../scripts/Makefile.build:549: recipe for target 'drivers/gpu/drm/msm' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/sdm845-mtp-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-dvt-v2.1-backup-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-dvt-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-dvt-v2.1-usb30-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-evb-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-evt1-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-evt2-cxo-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-evt2-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-mp-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-pvt-v2.1-backup-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-pvt-v2.1-overlay.dtbo' failed
../scripts/Makefile.build:549: recipe for target 'drivers/gpu/drm' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/enchilada-t0-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/flan-evb-v2-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/flan-evb-v2.1-overlay.dtbo' failed
scripts/Makefile.dtbo:24: recipe for target 'arch/arm64/boot/dts/qcom/sdm845-v2-mtp-overlay.dtbo' failed
../scripts/Makefile.build:549: recipe for target 'drivers/gpu' failed
/home/android/op6/android_kernel_oneplus_sdm845/Makefile:995: recipe for target 'drivers' failed
../scripts/Makefile.build:549: recipe for target 'arch/arm64/boot/dts/qcom' failed
arch/arm64/Makefile:129: recipe for target 'dtbs' failed
Makefile:150: recipe for target 'sub-make' failed
